spade-tests/src/snapshots/spade_tests__typeinference__negative_second_range_index_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: [int<8>; 6]) -> [int<8>; 1] {
    x[1..-5]
}


error: The end of the range must be after the start
  ┌─ testinput:2:5
  │
2 │     x[1..-5]
  │     ^^^^^^^^
  │     │ │  │
  │     │ │  End was inferred to be -5
  │     │ Start was inferred to be 1
  │     Range end before start
  │
  = help: If you want to swap the order of the elements, you can use `std::conv::flip_array`

error: Expected type [_; #uint], got [_; -6]
  ┌─ testinput:2:5
  │
2 │     x[1..-5]
  │     ^^^^^^^^
  │     │
  │     Expected [_; #uint], got [_; -6]
  │     The error occurred when unifying types here
  │
  = note: Expected: #uint
                in: [_; #uint]
               Got: -6
                in: [_; -6]
